Adding lead image + final market data

--- a/2025/2025-06-15-wir.md
+++ b/2025/2025-06-15-wir.md
@@ -1,8 +1,8 @@
-# tktk
+# Web3 is losing the battle to decentralize AI
 ## tktk
 
-![Circle co-founder and CEO Jeremy Allaire speaking at a fintech conference](https://w3w.news/img/allaire-wikimedia-1920.jpg)
-*Circle co-founder and CEO Jeremy Allaire speaking at MoneyConf 2018 in Dublin. Cropped photo by Eóin Noonan via Wikimedia Commons under Creative Commons 2.0 [license](https://creativecommons.org/licenses/by/2.0/).*
+![Robot hand making a fist](https://images.unsplash.com/photo-1535378273068-9bb67d5beacd?q=80&w=3388&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
+*Photo by Possessed Photography via Unsplash*
 
 <hr>
 
@@ -47,6 +47,8 @@ He is also the co-founder and President of Faktory, a generative AI platform for
 
 - **Acquisitions:** Big Meta acquisition https://www.theverge.com/news/684322/meta-scale-ai-15-billion-investment-zuckerberg | Stripe acquires Privy -- https://news.google.com/read/CBMiwwFBVV95cUxOZzB6Y3BDeGRVcDR6bExRNW9iVkxKSXAwZ0QwcUF0VDB4eVFJQnE3dlF5UmFJUFFpOFFxbGcyaFFYMHdFX0NsaWZSNEdZc3BnUkx6bzMyRkczMlJsenNkOFpuc0ZLMDJiTVkxcGlPYnBqdTlPQVpvLW5DQXd5RDVVck9nUkZZa3NaXzVyNG16TC1LN1BpSWc0VEhxaXVJUEo5RmNfclNFNHN6aXhZcFJKMFRxNEd5eFdIMnpkNVFmdFFwTUk?hl=en-US&gl=US&ceid=US%3Aen |
 
+<!--
+
 - Coinbase sees bullish crypoto outlook for 2025: https://www.theblock.co/post/358077/coinbase-report-corporate-bitcoin
 
 - Listed BTC funds hit $1T in trading volume in 18 months: https://www.theblock.co/post/357609/us-spot-bitcoin-etfs-set-to-hit-1-trillion-usd-cumulative-trading-volume
@@ -55,20 +57,11 @@ He is also the co-founder and President of Faktory, a generative AI platform for
 
 - 75% of users use chatbots for emotional support: https://decrypt.co/324466/majority-users-turn-ai-emotional-advice-study
 
-<!--
-
-Other candidates/links:
-
 - AI nonprofit: https://observer.com/2025/06/yoshua-bengio-nonprofit-counter-agentic-ai/
--
--
--
 
 -->
 
 ### Market Snapshot
-
-<!-- Preliminary formatting, data in the table below for now. Update after Friday's close in NY... -->
 
 *A quick look at some major indicators as of Friday's market close on Wall Street. For fuller detail, including additional indexes and asset classes, see my spreadsheet [here](https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?usp=sharing).*
 
@@ -86,64 +79,55 @@ Other candidates/links:
   <tbody>
    <tr>
      <td>Bitcoin</td>
-     <td><!-- BTC weekly closing price --></td>
-     <td><!-- BTC weekly % change --></td>
-     <td><!-- BTC YTD % change --></td>
+     <td>$105,106.08</td>
+     <td>+0.8%<!-- BTC weekly % change --></td>
+     <td>+12.0%<!-- BTC YTD % change --></td>
    </tr>
 
    <tr>
      <td>Nasdaq 100</td>
-     <td><!-- Nasdaq 100 weekly closing price --></td>
-     <td>-------------</td>
-     <td>-------------</td>
+     <td>21,631.04<!-- Nasdaq 100 weekly closing price --></td>
+     <td>-0.6%</td>
+     <td>+2.9%</td>
    </tr>
 
    <tr>
      <td>Gold</td>
-     <td><!-- Gold weekly closing price --></td>
-     <td>-------------</td>
-     <td>-------------</td>
+     <td>$3,452.60/oz.<!-- Gold weekly closing price --></td>
+     <td>+3.7%</td>
+     <td>+31.3%</td>
    </tr>
 
    <tr>
      <td>USD Index</td>
-     <td><!-- USD Index weekly closing price --></td>
-     <td>-------------</td>
-     <td>-------------</td>
+     <td>98.14<!-- USD Index weekly closing price --></td>
+     <td>-1.1%</td>
+     <td>-9.5%</td>
    </tr>
 
    <tr>
      <td>10-yr U.S.<br> Treasury Yield</td>
-     <td><!-- 10-year weekly closing yield --></td>
-     <td>-------------</td>
-     <td>-------------</td>
+     <td>4.424%<!-- 10-year weekly closing yield --></td>
+     <td>-0.09</td>
+     <td>-0.15</td>
    </tr>
 
 </tbody>
 </table>
 
-
 ### Looking Ahead
-
-- CoinDesk Opinion: Crypto is losing the race to AI: https://www.coindesk.com/opinion/2025/06/10/why-is-web3-losing-the-ai-race
-
-- CoinDesk Opinion: Don't let the cult of price hold back crypto: https://www.coindesk.com/opinion/2025/06/10/dont-let-the-cult-of-price-hold-crypto-back
-
-- There is a good chance crypto is "spreading" in your retirement account. https://news.google.com/read/CBMimgFBVV95cUxNR3l3eWktbWd2bTMwY1ZueDl3b1RISDdZakF4RzhzWHV0WUVQbVo1a05wVnI3MXVYdExPSHVENy0yd2VUazJ5MVNYem50aGZrY3Flalc4WDljcWR5ZzJTMFd2SXhyU3pYYklfQS1mRnZDMnY0Zkd0dENwSjMwaG5XNzR4ZU5FeF9HSFJ2UVhQT2JDRmhyZ1JlWC1B?hl=en-US&gl=US&ceid=US%3Aen
-
-- Uphold exploring an IPO: https://www.theblock.co/post/357653/the-daily-uphold-explores-ipo-after-circle-success-guggenheim-taps-xrp-ledger-in-rwa-push-and-more
 
 - Coinbase study says 60% of Fortune 500 working on blockchain projects: https://www.theblock.co/post/357522/60-of-fortune-500-companies-reportedly-working-on-blockchain-initiatives-coinbase | https://decrypt.co/324508/blockchain-use-soaring-fortune-500-smaller-firms-coinbase
 
-- Prof G/Pat McGee on iPhone in the U.S.
+- Uphold exploring an IPO: https://www.theblock.co/post/357653/the-daily-uphold-explores-ipo-after-circle-success-guggenheim-taps-xrp-ledger-in-rwa-push-and-more
+
+- There is a good chance crypto is "spreading" in your retirement account. https://news.google.com/read/CBMimgFBVV95cUxNR3l3eWktbWd2bTMwY1ZueDl3b1RISDdZakF4RzhzWHV0WUVQbVo1a05wVnI3MXVYdExPSHVENy0yd2VUazJ5MVNYem50aGZrY3Flalc4WDljcWR5ZzJTMFd2SXhyU3pYYklfQS1mRnZDMnY0Zkd0dENwSjMwaG5XNzR4ZU5FeF9HSFJ2UVhQT2JDRmhyZ1JlWC1B?hl=en-US&gl=US&ceid=US%3Aen
 
 ### Odds & Ends
 
-- tristan thompson turned down 32B in BTC: https://www.youtube.com/watch?v=Bg4yErvSHfE
+- **In an interview with Cointelegraph** at their recent Future of Money conference, pro basketball player Tristan Thompson recounted his decision to [reject a friend's advice](https://www.youtube.com/watch?v=Bg4yErvSHfE) back in 2015 to take a small portion of his salary in bitcoin. He estimates those tokens would now be worth $32 billion.
 
-- Salon writer refuses to surrender her beloved em dash: https://www.salon.com/2025/06/11/ai-cant-have-my-em-dash/
-
-- https://gothamist.com/news/nyc-lawmaker-wants-to-legalize-bodega-cats-in-the-5-boroughs
+- **A New York City councilman** plans to introduce a bill to legalize the presence of [cats in bodegas](https://gothamist.com/news/nyc-lawmaker-wants-to-legalize-bodega-cats-in-the-5-boroughs). According to Gothamist, an estimated 30% to 40% of such neighborhood corner stores in the city currently have cats, in large part to deter rodents. (Which *definitely* aren't legal.)
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
