Adding news summaries drafted by Leo/Llama 3.1 8B

--- a/2025/2025-06-15-wir.md
+++ b/2025/2025-06-15-wir.md
@@ -20,11 +20,13 @@ Jesus Rodriguez, CEO of the institutional DeFi platform IntoTheBlock, just sound
 >
 >*"As each new release compounds on the last, the barriers to catching up become steeper. All critical tooling, platforms, and infrastructure for building frontier models are currently centralized. Without urgent, coordinated efforts to change this trajectory, Web3-AI will be left decades behind in a field that advances in months."*
 
-
 a platform focused on enabling market intelligence and institutional DeFi solutions for crypto markets.
 
-
 He is also the co-founder and President of Faktory, a generative AI platform for business and consumer apps. Jesus also founded The Sequence, one of the most popular AI newsletters in the world. In addition to his operational work, Jesus is a guest lecturer at Columbia University and Wharton Business School and is a very active writer and speaker.
+
+Big Meta acquisition https://www.theverge.com/news/684322/meta-scale-ai-15-billion-investment-zuckerberg
+
+Midjourney/Disney suit: https://tech.yahoo.com/ai/articles/bottomless-pit-plagiarism-disney-takes-231426205.html
 
  <hr>
 
@@ -37,29 +39,15 @@ He is also the co-founder and President of Faktory, a generative AI platform for
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- SharpLink Gaming buys a big chunk o' ETH, is now the number-two holder behind the Ethereum Foundation. https://www.theblock.co/post/357998/sharplink-gaming-buys-463-million-in-eth-becomes-no-2-holder-after-ethereum-foundation
+- SharpLink Gaming, a Minnesota-based affiliate marketing firm, has made a significant move in the Ethereum ecosystem by purchasing 176,270.69 ETH for approximately $463 million, positioning the company as the second-largest holder of the cryptocurrency behind the Ethereum Foundation. This major purchase is part of SharpLink's effort to grow its Ethereum treasury strategy, with the company's CEO expressing deep conviction in Ethereum's role as foundational infrastructure for the future of digital commerce and decentralized applications. ([The Block](https://www.theblock.co/post/357998/sharplink-gaming-buys-463-million-in-eth-becomes-no-2-holder-after-ethereum-foundation)) <!-- Draft summary by Leo/Llama 3.1 8B -->
 
-- Walmart and Amazon are exploring issuance of their own stablecoins. https://www.wsj.com/finance/banking/walmart-amazon-stablecoin-07de2fdd?st=5E2Fxd&reflink=desktopwebshare_permalink
+- **US Spot Bitcoin ETFs Rapid Growth Continues**: The US spot Bitcoin ETFs are closing in on a $1 trillion cumulative trading volume milestone, with BlackRock's IBIT dominating the market with a 79% market share and over $70 billion in assets under management. This rapid growth is a significant milestone for the Bitcoin funds, which have attracted substantial trading volume and assets despite a slight slowdown in the crypto market earlier this year. ([The Block](https://www.theblock.co/post/357609/us-spot-bitcoin-etfs-set-to-hit-1-trillion-usd-cumulative-trading-volume)) <!-- Draft summary by Leo/Llama 3.1 8B -->
 
-- Senate advances GENIUS Act. https://www.cnbc.com/2025/06/13/what-the-genius-act-could-mean-for-crypto-and-other-investors.html
+- The U.S. Senate has advanced the GENIUS Act, a bill that aims to regulate the $238 billion stablecoin market by creating a clearer framework for banks and companies to issue digital currencies. If passed, the bill could make stablecoins more mainstream by bolstering trust in the currency and encouraging more competition in the market, potentially giving consumers more options and lower fees for transactions. ([CNBC](https://www.cnbc.com/2025/06/13/what-the-genius-act-could-mean-for-crypto-and-other-investors.html)) <!-- Draft summary by Leo/Llama 3.1 8B -->
 
-- Midjourney/Disney suit <!-- Link TK -->
+- 75% of users use chatbots for emotional support:([Decrypt](https://decrypt.co/324466/majority-users-turn-ai-emotional-advice-study))
 
-- **Acquisitions:** Big Meta acquisition https://www.theverge.com/news/684322/meta-scale-ai-15-billion-investment-zuckerberg | Stripe acquires Privy -- https://news.google.com/read/CBMiwwFBVV95cUxOZzB6Y3BDeGRVcDR6bExRNW9iVkxKSXAwZ0QwcUF0VDB4eVFJQnE3dlF5UmFJUFFpOFFxbGcyaFFYMHdFX0NsaWZSNEdZc3BnUkx6bzMyRkczMlJsenNkOFpuc0ZLMDJiTVkxcGlPYnBqdTlPQVpvLW5DQXd5RDVVck9nUkZZa3NaXzVyNG16TC1LN1BpSWc0VEhxaXVJUEo5RmNfclNFNHN6aXhZcFJKMFRxNEd5eFdIMnpkNVFmdFFwTUk?hl=en-US&gl=US&ceid=US%3Aen |
-
-<!--
-
-- Coinbase sees bullish crypoto outlook for 2025: https://www.theblock.co/post/358077/coinbase-report-corporate-bitcoin
-
-- Listed BTC funds hit $1T in trading volume in 18 months: https://www.theblock.co/post/357609/us-spot-bitcoin-etfs-set-to-hit-1-trillion-usd-cumulative-trading-volume
-
-- Guggenheim using XRP for tokenized RWA: https://www.theblock.co/post/357636/guggenheim-taps-ripples-xrp-ledger-to-offer-tokenized-commercial-paper-in-rwa-push-report
-
-- 75% of users use chatbots for emotional support: https://decrypt.co/324466/majority-users-turn-ai-emotional-advice-study
-
-- AI nonprofit: https://observer.com/2025/06/yoshua-bengio-nonprofit-counter-agentic-ai/
-
--->
+- Guggenheim Treasury Services has launched its Digital Commercial Paper (DCP) on the XRP Ledger, offering institutional investors exposure to short-term debt instruments through decentralized finance networks. This move reflects growing institutional interest in tokenized real-world assets (RWAs), with the market value of these assets surging to over $23 billion in the first half of 2025. ([The Block](https://www.theblock.co/post/357636/guggenheim-taps-ripples-xrp-ledger-to-offer-tokenized-commercial-paper-in-rwa-push-report)) <!-- Draft summary by Leo/Llama 3.1 8B -->
 
 ### Market Snapshot
 
@@ -117,11 +105,12 @@ He is also the co-founder and President of Faktory, a generative AI platform for
 
 ### Looking Ahead
 
-- Coinbase study says 60% of Fortune 500 working on blockchain projects: https://www.theblock.co/post/357522/60-of-fortune-500-companies-reportedly-working-on-blockchain-initiatives-coinbase | https://decrypt.co/324508/blockchain-use-soaring-fortune-500-smaller-firms-coinbase
+- Coinbase's latest State of Crypto report found that 60% of Fortune 500 companies were working on blockchain initiatives. <!-- Draft summary by me, based on light edit of Decrypt's own copy --> | **Blockchain Adoption on the Rise**: A recent survey by Coinbase found that nearly 60% of Fortune 500 companies are investing in or using blockchain technology, with many expressing concerns about regulation. The survey also revealed that small and medium-sized businesses have doubled their use of blockchain over the past year, citing its potential to address financial pain points such as transaction fees and processing times. <!-- Draft summary by Leo/Llama 3.1B -->([Decrypt](https://decrypt.co/324508/blockchain-use-soaring-fortune-500-smaller-firms-coinbase))
 
-- Uphold exploring an IPO: https://www.theblock.co/post/357653/the-daily-uphold-explores-ipo-after-circle-success-guggenheim-taps-xrp-ledger-in-rwa-push-and-more
+- **Retail giants Walmart and Amazon are exploring the possibility of issuing their own stablecoins, which could potentially bypass traditional payment systems and reduce fees for merchants.** This move, if implemented, could significantly impact the banking and credit card industries, as well as create new opportunities for retail and technology companies to enter the financial services sector. ([Wall Street Journal](https://www.wsj.com/finance/banking/walmart-amazon-stablecoin-07de2fdd?st=5E2Fxd&reflink=desktopwebshare_permalink)) <!-- Draft summary by Leo/Llama 3.1 8B -->
 
-- There is a good chance crypto is "spreading" in your retirement account. https://news.google.com/read/CBMimgFBVV95cUxNR3l3eWktbWd2bTMwY1ZueDl3b1RISDdZakF4RzhzWHV0WUVQbVo1a05wVnI3MXVYdExPSHVENy0yd2VUazJ5MVNYem50aGZrY3Flalc4WDljcWR5ZzJTMFd2SXhyU3pYYklfQS1mRnZDMnY0Zkd0dENwSjMwaG5XNzR4ZU5FeF9HSFJ2UVhQT2JDRmhyZ1JlWC1B?hl=en-US&gl=US&ceid=US%3Aen
+- **Cryptocurrency's Growing Presence in Retirement Accounts**
+A recent trend has seen cryptocurrency, including Bitcoin, quietly growing in many retirement accounts, with the encouragement of the Trump administration. This could have significant implications for investors, as scores of publicly traded companies now hold Bitcoin or other cryptocurrencies on their balance sheets, and exchange-traded funds have even begun to offer direct investment opportunities in the digital asset. ([New York Times](https://news.google.com/read/CBMimgFBVV95cUxNR3l3eWktbWd2bTMwY1ZueDl3b1RISDdZakF4RzhzWHV0WUVQbVo1a05wVnI3MXVYdExPSHVENy0yd2VUazJ5MVNYem50aGZrY3Flalc4WDljcWR5ZzJTMFd2SXhyU3pYYklfQS1mRnZDMnY0Zkd0dENwSjMwaG5XNzR4ZU5FeF9HSFJ2UVhQT2JDRmhyZ1JlWC1B?hl=en-US&gl=US&ceid=US%3Aen)) <!-- Draft summary by Leo/Llama 3.1 8B -->
 
 ### Odds & Ends
 
