Writing through lead item.

--- a/2025/2025-06-15-wir.md
+++ b/2025/2025-06-15-wir.md
@@ -14,19 +14,27 @@
 
 <hr>
 
-Jesus Rodriguez, CEO of the institutional DeFi platform IntoTheBlock, just sounded an important alarm. In [an essay](https://news.google.com/read/CBMif0FVX3lxTE9LVm9rbkFKWGRIYnlLcUZiWlNqdWZUYWFVbXRhaWlQZC1taEpRNlJ4bjRWUHZ2UkNqUXJpa2VYZ2tabF9nc1FNX1pBMmxNVEpyQmhkenotbmFsOHlnS1lOX0JKRzZnbVc3R2lPdnJVak1Za2pheWg3UUFWYVZnM0U?hl=en-US&gl=US&ceid=US%3Aen) for CoinDesk, he writes:
+**In theory, the potential intersection** of web3 and AI is certainly intriguing. But in fact, real-world implementation has advanced so little that the window of opportunity for web3 to have an impact may be closing.
+
+So says DeFi entrepreneur Jesus Rodriguez in [an essay](https://news.google.com/read/CBMif0FVX3lxTE9LVm9rbkFKWGRIYnlLcUZiWlNqdWZUYWFVbXRhaWlQZC1taEpRNlJ4bjRWUHZ2UkNqUXJpa2VYZ2tabF9nc1FNX1pBMmxNVEpyQmhkenotbmFsOHlnS1lOX0JKRzZnbVc3R2lPdnJVak1Za2pheWg3UUFWYVZnM0U?hl=en-US&gl=US&ceid=US%3Aen) for CoinDesk on Tuesday. The co-founder and CEO of IntoTheBlock writes:
 
 >*"AI innovation is compounding rapidly, and Web3 has been a passive observer. None of the major AI milestones—unsupervised pretraining, advanced fine-tuning, retrieval-augmented generation, reasoning engines, or agentic frameworks—have involved Web3 architectures in a meaningful way.*
 >
 >*"As each new release compounds on the last, the barriers to catching up become steeper. All critical tooling, platforms, and infrastructure for building frontier models are currently centralized. Without urgent, coordinated efforts to change this trajectory, Web3-AI will be left decades behind in a field that advances in months."*
 
-a platform focused on enabling market intelligence and institutional DeFi solutions for crypto markets.
+As if on cue, the headlines that broke in the days right after Rodriguez published this warning only served to underscore it:
 
-He is also the co-founder and President of Faktory, a generative AI platform for business and consumer apps. Jesus also founded The Sequence, one of the most popular AI newsletters in the world. In addition to his operational work, Jesus is a guest lecturer at Columbia University and Wharton Business School and is a very active writer and speaker.
+- Meta -- unrivaled poster child for the evils of centralized tech -- announced it would [acquire a 49% stake](https://www.msn.com/en-us/money/other/meta-invests-143b-in-ai-firm-scale-and-recruits-its-ceo-for-superintelligence-team/ar-AA1GCOFr) in the startup Scale AI for $14.3 billion.
 
-Big Meta acquisition https://www.theverge.com/news/684322/meta-scale-ai-15-billion-investment-zuckerberg
+- Disney [sued Midjourney](https://tech.yahoo.com/ai/articles/bottomless-pit-plagiarism-disney-takes-231426205.html), calling the AI image generator "a bottomless pit of plagiarism."
 
-Midjourney/Disney suit: https://tech.yahoo.com/ai/articles/bottomless-pit-plagiarism-disney-takes-231426205.html
+Ouch.
+
+You know, it's almost as if the internet economy is crying out for some native way for people to immutably document authorship and provenance of intellectual property. Especially as generative AI proliferates, it would also be handy if this system were to enable easy digital payments and collection of royalties on IP. 
+
+Or we could all just keep suing each other and running up legal bills.
+
+Yeah. Let's do the latter.
 
  <hr>
 
@@ -39,15 +47,16 @@ Midjourney/Disney suit: https://tech.yahoo.com/ai/articles/bottomless-pit-plagia
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- SharpLink Gaming, a Minnesota-based affiliate marketing firm, has made a significant move in the Ethereum ecosystem by purchasing 176,270.69 ETH for approximately $463 million, positioning the company as the second-largest holder of the cryptocurrency behind the Ethereum Foundation. This major purchase is part of SharpLink's effort to grow its Ethereum treasury strategy, with the company's CEO expressing deep conviction in Ethereum's role as foundational infrastructure for the future of digital commerce and decentralized applications. ([The Block](https://www.theblock.co/post/357998/sharplink-gaming-buys-463-million-in-eth-becomes-no-2-holder-after-ethereum-foundation)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+- **A new ETH whale:** Nasdaq-listed SharpLink Gaming announced it has bought $463 million in ether for its coprate treasury. The purchase instantly makes SharpLink the world's second-largest holder of ether tokens, behind only the Ethereum Foundation. ([The Block](https://www.theblock.co/post/357998/sharplink-gaming-buys-463-million-in-eth-becomes-no-2-holder-after-ethereum-foundation))
 
-- **US Spot Bitcoin ETFs Rapid Growth Continues**: The US spot Bitcoin ETFs are closing in on a $1 trillion cumulative trading volume milestone, with BlackRock's IBIT dominating the market with a 79% market share and over $70 billion in assets under management. This rapid growth is a significant milestone for the Bitcoin funds, which have attracted substantial trading volume and assets despite a slight slowdown in the crypto market earlier this year. ([The Block](https://www.theblock.co/post/357609/us-spot-bitcoin-etfs-set-to-hit-1-trillion-usd-cumulative-trading-volume)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+- **Bitcoin ETFs hit a major milestone.** U.S.-listed bitcoin funds on Wednesday surpassed $1 trillion in cumulative trading volume since their launch in January 2024, according to [data from The Block](https://www.theblock.co/data/crypto-markets/bitcoin-etf/cumulative-spot-bitcoin-etf-volumes). BlackRock's IBIT fund [dominates the category](https://www.theblock.co/post/357609/us-spot-bitcoin-etfs-set-to-hit-1-trillion-usd-cumulative-trading-volume) with a 79% market share and over $70 billion in assets under management.  
 
-- The U.S. Senate has advanced the GENIUS Act, a bill that aims to regulate the $238 billion stablecoin market by creating a clearer framework for banks and companies to issue digital currencies. If passed, the bill could make stablecoins more mainstream by bolstering trust in the currency and encouraging more competition in the market, potentially giving consumers more options and lower fees for transactions. ([CNBC](https://www.cnbc.com/2025/06/13/what-the-genius-act-could-mean-for-crypto-and-other-investors.html)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+- **An amended version of the GENIUS Act,** which would set clearer rules for stablecoins in the U.S., passed a procedural vote in the Senate on Wedneday. The move puts the bill closer to final passage on the full floor soon. ([Politico](https://www.politico.com/live-updates/2025/06/11/congress/landmark-crypto-bill-moves-closer-to-passage-in-senate-00400472))
 
-- 75% of users use chatbots for emotional support:([Decrypt](https://decrypt.co/324466/majority-users-turn-ai-emotional-advice-study))
+- **Guggenheim Capital's treasury unit launched** a commercial paper offering on Ripple's XRP Ledger platform, offering institutional investors exposure to short-term debt instruments on-chain. The move is emblematic of Wall Street's growing interest in tokenizing real-world assets (RWAs) rather than trading them over traditional proprietary networks. ([The Block](https://www.theblock.co/post/357636/guggenheim-taps-ripples-xrp-ledger-to-offer-tokenized-commercial-paper-in-rwa-push-report))
 
-- Guggenheim Treasury Services has launched its Digital Commercial Paper (DCP) on the XRP Ledger, offering institutional investors exposure to short-term debt instruments through decentralized finance networks. This move reflects growing institutional interest in tokenized real-world assets (RWAs), with the market value of these assets surging to over $23 billion in the first half of 2025. ([The Block](https://www.theblock.co/post/357636/guggenheim-taps-ripples-xrp-ledger-to-offer-tokenized-commercial-paper-in-rwa-push-report)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+- **In new study by researchers at Tokyo's Waseda University,** 75% of study participants turned to AI chatbots for emotional advice while 39% perceived AI as a constant, dependable presence in their lives. Lead researcher Fan Yang warned that the findings suggest AI platforms could exploit vulnerable users' emotional attachments for money or other goals. ([Decrypt](https://decrypt.co/324466/majority-users-turn-ai-emotional-advice-study))
+
 
 ### Market Snapshot
 
@@ -105,16 +114,16 @@ Midjourney/Disney suit: https://tech.yahoo.com/ai/articles/bottomless-pit-plagia
 
 ### Looking Ahead
 
-- Coinbase's latest State of Crypto report found that 60% of Fortune 500 companies were working on blockchain initiatives. <!-- Draft summary by me, based on light edit of Decrypt's own copy --> | **Blockchain Adoption on the Rise**: A recent survey by Coinbase found that nearly 60% of Fortune 500 companies are investing in or using blockchain technology, with many expressing concerns about regulation. The survey also revealed that small and medium-sized businesses have doubled their use of blockchain over the past year, citing its potential to address financial pain points such as transaction fees and processing times. <!-- Draft summary by Leo/Llama 3.1B -->([Decrypt](https://decrypt.co/324508/blockchain-use-soaring-fortune-500-smaller-firms-coinbase))
+- **Coinbase's latest State of Crypto report** found that 60% of Fortune 500 companies are investing in or using blockchain technology. The survey also revealed that small and medium-sized businesses have doubled their use of blockchain over the past year. ([Decrypt](https://decrypt.co/324508/blockchain-use-soaring-fortune-500-smaller-firms-coinbase))
 
-- **Retail giants Walmart and Amazon are exploring the possibility of issuing their own stablecoins, which could potentially bypass traditional payment systems and reduce fees for merchants.** This move, if implemented, could significantly impact the banking and credit card industries, as well as create new opportunities for retail and technology companies to enter the financial services sector. ([Wall Street Journal](https://www.wsj.com/finance/banking/walmart-amazon-stablecoin-07de2fdd?st=5E2Fxd&reflink=desktopwebshare_permalink)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+- **U.S. investors' retirement portfolios** increasingly include exposure to crypto, often in indirect ways that might not be obvious. Contributing factors to this trend include public companies holding bitcoin in their cash reserves, the addition of crypto companies like Coinbase to major stock-market indexes like the S&P 500, and the listing of exchange-traded funds holding crypto. ([New York Times](https://news.google.com/read/CBMimgFBVV95cUxNR3l3eWktbWd2bTMwY1ZueDl3b1RISDdZakF4RzhzWHV0WUVQbVo1a05wVnI3MXVYdExPSHVENy0yd2VUazJ5MVNYem50aGZrY3Flalc4WDljcWR5ZzJTMFd2SXhyU3pYYklfQS1mRnZDMnY0Zkd0dENwSjMwaG5XNzR4ZU5FeF9HSFJ2UVhQT2JDRmhyZ1JlWC1B?hl=en-US&gl=US&ceid=US%3Aen)) <!-- Draft summary by Leo/Llama 3.1 8B -->
 
-- **Cryptocurrency's Growing Presence in Retirement Accounts**
-A recent trend has seen cryptocurrency, including Bitcoin, quietly growing in many retirement accounts, with the encouragement of the Trump administration. This could have significant implications for investors, as scores of publicly traded companies now hold Bitcoin or other cryptocurrencies on their balance sheets, and exchange-traded funds have even begun to offer direct investment opportunities in the digital asset. ([New York Times](https://news.google.com/read/CBMimgFBVV95cUxNR3l3eWktbWd2bTMwY1ZueDl3b1RISDdZakF4RzhzWHV0WUVQbVo1a05wVnI3MXVYdExPSHVENy0yd2VUazJ5MVNYem50aGZrY3Flalc4WDljcWR5ZzJTMFd2SXhyU3pYYklfQS1mRnZDMnY0Zkd0dENwSjMwaG5XNzR4ZU5FeF9HSFJ2UVhQT2JDRmhyZ1JlWC1B?hl=en-US&gl=US&ceid=US%3Aen)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+- **Walmart and Amazon** are exploring the possibility of issuing their own stablecoins, which could bypass traditional payment systems and reduce fees for merchants. ([Wall Street Journal](https://www.wsj.com/finance/banking/walmart-amazon-stablecoin-07de2fdd?st=5E2Fxd&reflink=desktopwebshare_permalink)) <!-- Draft summary by Leo/Llama 3.1 8B -->
+
 
 ### Odds & Ends
 
-- **In an interview with Cointelegraph** at their recent Future of Money conference, pro basketball player Tristan Thompson recounted his decision to [reject a friend's advice](https://www.youtube.com/watch?v=Bg4yErvSHfE) back in 2015 to take a small portion of his salary in bitcoin. He estimates those tokens would now be worth $32 billion.
+- **In an interview with Cointelegraph** at their recent Future of Money conference, pro basketball player Tristan Thompson recounted his decision to [reject a friend's advice](https://www.youtube.com/watch?v=Bg4yErvSHfE) back in 2015 to receive a small portion of his salary in bitcoin. Thompson estimates those tokens would now be worth $32 billion.
 
 - **A New York City councilman** plans to introduce a bill to legalize the presence of [cats in bodegas](https://gothamist.com/news/nyc-lawmaker-wants-to-legalize-bodega-cats-in-the-5-boroughs). According to Gothamist, an estimated 30% to 40% of such neighborhood corner stores in the city currently have cats, in large part to deter rodents. (Which *definitely* aren't legal.)
 
