Copyedits + final hed and subhead , assisted by ChatGPT

--- a/2025/2025-06-15-wir.md
+++ b/2025/2025-06-15-wir.md
@@ -1,5 +1,5 @@
-# Web3 is losing the battle to decentralize AI
-## tktk
+# Web3 is losing the battle to decentralize AI.
+## An on-chain future for AI is still possible. But it's rapidly slipping out of reach as Big Tech pads its lead.
 
 ![Robot hand making a fist](https://images.unsplash.com/photo-1535378273068-9bb67d5beacd?q=80&w=3388&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
 *Photo by Possessed Photography via Unsplash*
@@ -16,13 +16,13 @@
 
 **In theory, the potential intersection** of web3 and AI is certainly intriguing. But in fact, real-world implementation has advanced so little that the window of opportunity for web3 to have an impact may be closing.
 
-So says DeFi entrepreneur Jesus Rodriguez in [an essay](https://news.google.com/read/CBMif0FVX3lxTE9LVm9rbkFKWGRIYnlLcUZiWlNqdWZUYWFVbXRhaWlQZC1taEpRNlJ4bjRWUHZ2UkNqUXJpa2VYZ2tabF9nc1FNX1pBMmxNVEpyQmhkenotbmFsOHlnS1lOX0JKRzZnbVc3R2lPdnJVak1Za2pheWg3UUFWYVZnM0U?hl=en-US&gl=US&ceid=US%3Aen) for CoinDesk on Tuesday. The co-founder and CEO of IntoTheBlock writes:
+So says [DeFi](https://www.urbandictionary.com/define.php?term=DeFi) entrepreneur Jesus Rodriguez in [an essay](https://news.google.com/read/CBMif0FVX3lxTE9LVm9rbkFKWGRIYnlLcUZiWlNqdWZUYWFVbXRhaWlQZC1taEpRNlJ4bjRWUHZ2UkNqUXJpa2VYZ2tabF9nc1FNX1pBMmxNVEpyQmhkenotbmFsOHlnS1lOX0JKRzZnbVc3R2lPdnJVak1Za2pheWg3UUFWYVZnM0U?hl=en-US&gl=US&ceid=US%3Aen) for CoinDesk on Tuesday. The co-founder and CEO of IntoTheBlock writes:
 
->*"AI innovation is compounding rapidly, and Web3 has been a passive observer. None of the major AI milestones—unsupervised pretraining, advanced fine-tuning, retrieval-augmented generation, reasoning engines, or agentic frameworks—have involved Web3 architectures in a meaningful way.*
+>*"AI innovation is compounding rapidly, and Web3 has been a passive observer. None of the major AI milestones — unsupervised pretraining, advanced fine-tuning, retrieval-augmented generation, reasoning engines, or agentic frameworks—have involved Web3 architectures in a meaningful way.*
 >
 >*"As each new release compounds on the last, the barriers to catching up become steeper. All critical tooling, platforms, and infrastructure for building frontier models are currently centralized. Without urgent, coordinated efforts to change this trajectory, Web3-AI will be left decades behind in a field that advances in months."*
 
-As if on cue, the headlines that broke in the days right after Rodriguez published this warning only served to underscore it:
+As if on cue, the headlines that broke in the days right after Rodriguez published this warning only served to underscore his point:
 
 - Meta -- unrivaled poster child for the evils of centralized tech -- announced it would [acquire a 49% stake](https://www.msn.com/en-us/money/other/meta-invests-143b-in-ai-firm-scale-and-recruits-its-ceo-for-superintelligence-team/ar-AA1GCOFr) in the startup Scale AI for $14.3 billion.
 
@@ -30,7 +30,7 @@ As if on cue, the headlines that broke in the days right after Rodriguez publish
 
 Ouch.
 
-You know, it's almost as if the internet economy is crying out for some native way for people to immutably document authorship and provenance of intellectual property. Especially as generative AI proliferates, it would also be handy if this system were to enable easy digital payments and collection of royalties on IP. 
+You know, it's almost as if the internet economy is crying out for some native way for people to immutably document identity, authorship, and provenance of intellectual property. Especially as generative AI proliferates, it would also be handy if this system were to enable easy digital payments, licensing, and collection of royalties on IP.
 
 Or we could all just keep suing each other and running up legal bills.
 
