--- a/2025/2025-06-15-wir.md
+++ b/2025/2025-06-15-wir.md
@@ -34,7 +34,7 @@ You know, it's almost as if the internet economy is crying out for some native w
 
 Or we could all just keep suing each other and running up legal bills.
 
-Yeah. Let's do the latter.
+Yeah. Sure. Let's do the latter.
 
  <hr>
 
