--- a/2025/2025-06-15-wir.md
+++ b/2025/2025-06-15-wir.md
@@ -1,5 +1,5 @@
 # Web3 is losing the battle to decentralize AI.
-## An on-chain future for AI is still possible. But it's rapidly slipping out of reach as Big Tech pads its lead.
+## A blockchain-driven future for AI is still possible. But it's rapidly slipping out of reach as Big Tech pads its lead.
 
 ![Robot hand making a fist](https://images.unsplash.com/photo-1535378273068-9bb67d5beacd?q=80&w=3388&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
 *Photo by Possessed Photography via Unsplash*
